--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="css/style" href="./assets/style.css">
-    <link rel="stylesheet" type="css/style" href="./assets/script.js">
+    <link rel="stylesheet" type="css/style" href="./assets/style.css"/>
+    <link rel="stylesheet" type="css/style" href="./assets/script.js"/>
     
   </head>
 
   <body>
-    <h1>
+    <header>
       Password Generator
-    </h1>
+    </header>
 
   </body>
 
