--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="css/style" href="./assets/style.css"/>
-    <link rel="stylesheet" type="css/style" href="./assets/script.js"/>
-    
+    <!-- <script src="./assets/script.js"></script> -->
   </head>
 
   <body>
-    <header>
+    <h1>
       Password Generator
-    </header>
+    </h1>
+  <p>
+    this is a test
+  </p>
 
   </body>
 
