pretty much completed the javascript file edits

--- a/index.html
+++ b/index.html
@@ -2,17 +2,24 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="css/style" href="./assets/style.css"/>
-    <!-- <script src="./assets/script.js"></script> -->
+    <link rel="stylesheet" href="./assets/style.css">
+    <script src="./assets/script.js"></script>
   </head>
 
   <body>
     <h1>
       Password Generator
     </h1>
-  <p>
-    this is a test
-  </p>
+    <main>
+      <p>
+        Generate a Password
+      </p>
+      <div class="display">
+        Your Secure Password
+      </div>
+      <div class="button" onclick="resetPass(),genPass()">Generate Password</div>
+    </main>
+  
 
   </body>
 
