copied and pasted my version of module 3 into this

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
   </head>
 
   <body>
-    <h1>
-      Password Generator
-    </h1>
+    <header>
+      <h1>
+        Password Generator
+      </h1>
+    </header>
+    
     <div class="card">
       <p>
         Generate a Password
